# autonomy-packages

./: .gitignore  README.md
aut_common/: CMakeLists.txt
aut_common/include/aut_common/: graph.h  transform_smoother.h  transformer.h
aut_common/src/: graph.cc  transform_smoother.cc  transformer.cc
aut_global_planner/: CMakeLists.txt
aut_global_planner/include/aut_global_planner/: global_planner.h
aut_global_planner/src/: global_planner.cc
aut_launch/launch/: localization_offline_launch.py  mapping_launch.py  mapping_offline_launch.py  navigation_offline_launch.py  navigation_without_command_launch.py  velodyne_launch.py
aut_launch/params/: velodyne_params.yaml
aut_lidar_odometry/include/aut_lidar_odometry/: feature_extraction.h  lidar_odometry.h  optimization.h
aut_lidar_odometry/src/: feature_extraction.cc  lidar_odometry.cc  optimization.cc
aut_local_mapping/: CMakeLists.txt  package.xml
aut_local_mapping/include/aut_local_mapping/: local_mapper.h  voxel_grid.h
aut_local_mapping/src/: local_mapper.cc  main.cc  voxel_grid.cc
aut_local_planner/: CMakeLists.txt
aut_local_planner/include/aut_local_planner/: a_star.h  dijkstra.h  grid.h  hybrid_a_star.h  local_grid.h  local_planner.h
aut_local_planner/src/: a_star.cc  dijkstra.cc  grid.cc  hybrid_a_star.cc  local_grid.cc  local_planner.cc
aut_localization/src/: monte_carlo_localization.cc
aut_map_publisher/: CMakeLists.txt  package.xml
aut_map_publisher/src/: main.cc
aut_msgs/: CMakeLists.txt
aut_msgs/action/: NavigateToFurthest.action  NavigateToGoal.action
aut_msgs/msg/: LocalGrid.msg  Nav.msg  NavCommand.msg  NavModif.msg
aut_slam/include/aut_slam/: graph_optimization.h
aut_slam/launch/: slam_offline_launch.py
aut_slam/params/: slam_offline_params.yaml
aut_slam/src/: graph_optimization.cc
aut_spot/: package.xml  setup.py
aut_spot/aut_spot/: spot_command.py  spot_data.py
aut_tests/: CMakeLists.txt
aut_utils/include/aut_utils/: utils.h
aut_utils/src/: utils.cc
launch/: autonomy_launch.py
src/autonomous_interfaces/: CMakeLists.txt  package.xml
src/autonomous_interfaces/msg/: Fiducial.msg  Fiducials.msg
src/lidar_odometry/: package.xml
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: slam_params.yaml
src/slam/include/slam/: optimization.hpp  utils.hpp
src/slam/launch/: odometry_launch.py  slam_launch.py  test_launch.py
src/slam/msg/: Cloud.msg
src/slam/src/: feature_extraction.cpp  graph_optimization.cpp  lidar_odometry.cpp  map_publisher.cpp  monte_carlo_localization.cpp  optimization.cpp  save_map.cpp  utils.cpp
src/spot_driver/: package.xml  setup.py
src/spot_driver/config/: spot_driver.yaml
src/spot_driver/launch/: spot_driver_launch.py
src/spot_driver/spot_driver/: spot_connect_client.py  spot_fiducial_pub.py  spot_fiducial_sub.py  spot_odometry_pub.py
src/velodyne_launch/: velodyne_launch.py
